# soda_vmware_plugin

./: README.md
soda_vmware_plugin_for_sra/: README.md
soda_vmware_plugin_for_sra/doc/: SRA Compilation Guide.docx  User Guide (SRA).doc
soda_vmware_plugin_for_sra/source/: CMakeLists.txt  sra.sln
soda_vmware_plugin_for_sra/source/CmdAdapter/: CmdAdapter.cpp  CmdAdapter.h  CmdAdapter.vcxproj  CmdAdapter.vcxproj.filters  CmdOperate.cpp  CmdOperate.h  CmdRESTAdapter.cpp  CmdRESTAdapter.h  CmdRESTFusionStorage.cpp  CmdRESTFusionStorage.h  Enum_define.h  InCLIImp.h  RESTConn.cpp  RESTConn.h  RESTPackage.cpp  RESTPackage.h
soda_vmware_plugin_for_sra/source/TlvCom/: CMakeLists.txt  TLVCom.vcxproj  cli_exception.h  communcation_export.h  communication.h  msg_package.cpp  msg_package.h  om_connecter.cpp
soda_vmware_plugin_for_sra/source/common/: XmlInterface.h  common.h  common.vcxproj  common.vcxproj.filters  error_code.h
soda_vmware_plugin_for_sra/source/common/cli/: rslt_parser.cpp  rslt_parser.h
soda_vmware_plugin_for_sra/source/common/os/: BaseException.h  Commf.cpp  Commf.h  Log.cpp  Log.h  Type.h
soda_vmware_plugin_for_sra/source/common/xml_node/: array.cpp  array.h  arrays.cpp  arrays.h  cg_snapshot.cpp  cg_snapshot.h  commond_info.cpp  commond_info.h  consistency_groups.cpp  consistency_groups.h  device.cpp  device.h  device_sync.cpp  device_sync.h  failover_results.cpp  failover_results.h  identity.cpp  identity.h  recovery_point.cpp  recovery_point.h  replicated_devices.cpp  replicated_devices.h  replication_setting.cpp  replication_setting.h  snapshot.cpp  snapshot.h  source_device.cpp  source_device.h  source_devices.cpp  source_devices.h  target_device.cpp  target_device.h  target_devices.cpp  target_devices.h  target_groups.cpp  target_groups.h
soda_vmware_plugin_for_sra/source/common/xmlserial/: xmlcommon.h  xmlreader.cpp  xmlreader.h  xmlserializable.cpp  xmlserializable.h  xmlwriter.cpp  xmlwriter.h
soda_vmware_plugin_for_sra/source/securec/: memset_s.c  securec.h  securec.vcxproj  securec.vcxproj.filters
soda_vmware_plugin_for_sra/source/sra/: ThreeDCLun.cpp  ThreeDCLun.h  discover_arrays.cpp  discover_arrays.h  discover_devices.cpp  discover_devices.h  failover.cpp  failover.h  prepare_failover.cpp  prepare_failover.h  prepare_reverse.cpp  prepare_reverse.h  query_capacity.cpp  query_capacity.h  query_connection.cpp  query_connection.h  query_error.cpp  query_error.h  query_info.cpp  query_info.h  query_strings.cpp  query_strings.h  query_syncstatus.cpp  query_syncstatus.h  restore.cpp  restore.h  reverse_replication.cpp  reverse_replication.h  sra.cpp  sra.h  sra.vcxproj  sra_basic.cpp  sra_basic.h  sync_once.cpp  sync_once.h  test_failover_start.cpp  test_failover_start.h  test_failover_stop.cpp  test_failover_stop.h
soda_vmware_plugin_for_sra/third_party_groupware/OpenSDS_Storage_Plugins/: thirdparty_version.txt
soda_vmware_plugin_for_sra/third_party_groupware/build_scripts/: build_ACE.bat  build_curl.bat  build_jsoncpp.bat  build_libssh2.bat  build_openssl.bat  build_tinyxml.bat  build_zlib_86.bat  init_dir.bat  one_key_build3rd.bat
soda_vmware_plugin_for_sra/third_party_groupware/compile configuration file/ace/ace/: ACE_vc12.vcxproj  ACE_vc12.vcxproj.filters  ace_vc12.sln
soda_vmware_plugin_for_sra/third_party_groupware/compile configuration file/ace/ssl/: SSL.vcxproj
soda_vmware_plugin_for_sra/third_party_groupware/compile configuration file/jsoncpp/msvc2010/: jsontest.vcxproj  lib_json.vcxproj  test_lib_json.vcxproj
soda_vmware_plugin_for_sra/third_party_groupware/compile configuration file/libssh2/: libssh2.sln  libssh2.vcxproj  libssh2.vcxproj.filters  tests.vcxproj  tests.vcxproj.filters
soda_vmware_plugin_for_vaai_nas/: README.md
soda_vmware_plugin_for_vaai_nas/code/: Common.c  Common.h  ExtendedStats.c  ExtendedStats.h  FileCloning.c  FileCloning.h  FileSpaceReservation.c  FileSpaceReservation.h  exampleNas.c  mount.h  mount_clnt.c  mount_xdr.c  nfs_prot.h  nfs_prot_clnt.c  nfs_prot_xdr.c  plugin.c  pluginInt.h  rpcb_prot.h  rpcb_prot_clnt.c  rpcb_prot_xdr.c  vaai_nas.h  vaai_nas_clnt.c  vaai_nas_intf.h  vaai_nas_xdr.c
soda_vmware_plugin_for_vaai_nas/doc/: OpenSDS VAAI-NAS Plugin编译指导书.docx  User Guide (VAAI-NAS).doc  用户指南（VAAI-NAS）.doc
soda_vmware_plugin_for_vaai_nas/initscripts/: OpenSDSVAAINasPlugin-firewall.xml  build-bundle.inc
soda_vmware_plugin_for_vaai_nas/makefile/: Makefile  bulletin.xml  descriptor.xml  vendor-index.xml
soda_vmware_plugin_for_vaai_nas/secLib/include/: securec.h  securectype.h
soda_vmware_plugin_for_vaai_nas/secLib/src/: input.inl  memcpy_s.c  memmove_s.c  memset_s.c  output.inl  secinput.h  securecutil.c  securecutil.h  secureinput_a.c  secureinput_w.c  secureprintoutput.h  secureprintoutput_a.c  secureprintoutput_w.c  snprintf_s.c  sprintf_s.c  strcpy_s.c  strncpy_s.c  strtok_s.c  vsnprintf_s.c  vsprintf_s.c
soda_vmware_plugin_for_vasa2/: pom.xml
soda_vmware_plugin_for_vasa2/VASA_Provider_2.0/: pom.xml
soda_vmware_plugin_for_vro/: README.md
soda_vmware_plugin_for_vro/docs/: 用户指南（vRO）.doc
soda_vmware_plugin_for_vro/release/: org.OpenSDS.Storage.edit.package
soda_vmware_plugin_for_vro/src/: build.xml  maven-build.properties  pom.xml
soda_vmware_plugin_for_vro/src/o11nplugin-storage/: build.xml
soda_vmware_plugin_for_vro/src/o11nplugin-storage-core/: build.xml
soda_vmware_plugin_for_vro/src/o11nplugin-storage-model/: build.xml
soda_vmware_plugin_for_vrops/: README.md
soda_vmware_plugin_for_vrops/run/: run.bat
soda_vmware_plugin_for_vrops/src/: build.xml  maven-build.properties  pom.xml
soda_vmware_plugin_for_vrops/src/OpenSDSStorAdapter/: adapter.properties  adapter.xml
soda_vmware_plugin_for_vrops/src/OpenSDSStorAdapter/conf/: describe.xml  describeSchema.xsd  log4j2.xml  version.txt
soda_vmware_plugin_for_vrops/src/OpenSDSStorAdapterMP/: build.xml  eula.txt  manifest.txt  postAdapters.py  solution.xml
soda_vmware_plugin_for_vrops/src/OpenSDSStorAdapterMP/resources/: resources.properties  resources_en.properties
(+182 files in other folders)
